# Book-Scraper

./: .env.example  .gitignore  README.md  book_scraper.py  config.py  models.py  parsers.py  process_handler.py  pyproject.toml
